Fix image shift after load in carousels

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -342,7 +342,6 @@ span.block {
 
 .auto-carousel {
   display: inline-flex;
-  transform: translate(0, -50%);
 }
 
 .auto-carousel.animate {
